[package]
name = "rustwii"
authors = ["NinjaCheetah <campbell@ninjacheetah.dev>"]
license = "MIT"
description = "A Rust library and CLI for handling files and formats used by the Wii"
version = "0.1.0"
readme = "README.md"
homepage = "https://github.com/NinjaCheetah/rustwii"
repository = "https://github.com/NinjaCheetah/rustwii"
edition = "2024"
default-run = "rustwii"

[[bin]]
name = "rustwii"
path = "src/bin/rustwii/main.rs"

[[bin]]
name = "playground"
path = "src/bin/playground/main.rs"

[lib]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
byteorder = "1"
cbc = "0"
aes = "0"
rsa = { version = "0", features = ["sha2"] }
hex = "0"
sha1 = { version = "0", features = ["oid"] }
glob = "0"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0", features = ["blocking"] }
rand = "0"
walkdir = "2"
tempfile = "3"
rust-ini = "0"
zip = "8"
